apps/frontend/overlays/test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-site
  namespace: test
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - test.79.174.84.176.sslip.io
      secretName: test-site-tls
  rules:
    - host: test.79.174.84.176.sslip.io
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: test-api
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-web
                port:
                  number: 80
